// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input #render() should render correct input 1`] = `
<input
  className="ui-input"
  disabled={true}
  name="input"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
/>
`;

exports[`Input #render() should render multiline input 1`] = `
<textarea
  className="ui-input"
  disabled={true}
  name="input"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
/>
`;
